优化日志存储（未完全实现），更新部分实现